<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etNewWriting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:importantForAutofill="no"
        android:lines="4"
        android:gravity="top|start"
        android:hint="@string/dear_diary"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnUndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etNewWriting"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        android:text="@string/undo" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etNewWriting"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"
        android:text="@string/save" />

    <TextView
        android:id="@+id/tvDiary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnUndo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp" />

</androidx.constraintlayout.widget.ConstraintLayout>
